--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ cuter and fuzzier.
   interesting&rdquo; photos tagged with the search term of your
   choice.  You can specify your own search term by editing the URL in
   your browser's location bar <a
-  href="http://writtenkitten.net/?search=dinosaur">like this</a>.
+  href="https://kitten.appinn.net/?search=dinosaur">like this</a>.
   </p>
   <p>
   Written? Kitten! is <a
